--- a/index.html
+++ b/index.html
@@ -969,25 +969,26 @@
                 <div class="col-lg-6 animate__animated animate__fadeInRight">
                     <div class="card p-4 h-100">
                         <h4 style="color: white; margin-bottom: 10px;"><i class="fas fa-envelope me-2"></i>Send Me a Message</h4>
-                        <form class="contact-form">
-                            <div class="mb-3">
-                                <label for="name" class="form-label" style="color: white; margin-bottom: 10px;">Name</label>
-                                <input type="text" class="form-control" id="name" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label"style="color: white; margin-bottom: 10px;">Email</label>
-                                <input type="email" class="form-control" id="email" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="subject" class="form-label"style="color: white; margin-bottom: 10px;">Subject</label>
-                                <input type="text" class="form-control" id="subject" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label"style="color: white; margin-bottom: 10px;">Message</label>
-                                <textarea class="form-control" id="message" rows="5" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary" style="color: white; margin-bottom: 10px;">Send Message</button>
-                        </form>
+                        <form class="contact-form" action="https://formsubmit.co/4a15a65ba1f44301f47ebb63dc7ce8ab" method="POST">
+                        <div class="mb-3">
+                            <label for="name" class="form-label" style="color: white; margin-bottom: 10px;">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label" style="color: white; margin-bottom: 10px;">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="subject" class="form-label" style="color: white; margin-bottom: 10px;">Subject</label>
+                            <input type="text" class="form-control" id="subject" name="subject" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label" style="color: white; margin-bottom: 10px;">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary" style="color: white; margin-bottom: 10px;">Send Message</button>
+                    </form>
+
                     </div>
                 </div>
             </div>
