--- a/index.html
+++ b/index.html
@@ -986,8 +986,11 @@
                             <label for="message" class="form-label" style="color: white; margin-bottom: 10px;">Message</label>
                             <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary" style="color: white; margin-bottom: 10px;">Send Message</button>
-                    </form>
+                       <button type="submit" class="btn btn-primary">Send Message</button>
+</form>
+
+<!-- Success message -->
+<div id="form-status" class="mt-3 text-success fw-bold"></div>
 
                     </div>
                 </div>
