--- a/index.html
+++ b/index.html
@@ -1165,9 +1165,10 @@
                         <li>Advanced analytics dashboard for sales reporting</li>
                         <li>Automated inventory management system</li>
                         <li>Integrated payment gateways and shipping calculators</li>
+                        <li>DHL integration for global shipping</li>
                     </ul>
                     <div class="project-stats">
-                        <span class="visitors">→ Monthly Active Users: 850+</span>
+                        <span class="visitors">→ Monthly Active Users: 50+</span>
                         <div class="tech-stack">
                             <span class="tech-badge">PHP</span>
                             <span class="tech-badge">MySQL</span>
@@ -1190,14 +1191,16 @@
                         <li>Sales analytics and customer behavior tracking</li>
                         <li>Customizable product catalogs with advanced filtering</li>
                         <li>Real-time inventory synchronization</li>
+                        <li>DHL integration for global shipping</li>
                     </ul>
                     <div class="project-stats">
-                        <span class="visitors">→ Monthly Active Users: 1,200+</span>
+                        <span class="visitors">→ Monthly Active Users: 100+</span>
                         <div class="tech-stack">
                             <span class="tech-badge">PHP</span>
                             <span class="tech-badge">Bootstrap</span>
                             <span class="tech-badge">MySQL</span>
                             <span class="tech-badge">Google Analytics</span>
+                            
                         </div>
                     </div>
                     <a href="https://eonn.co.ke" target="_blank" class="project-link">
@@ -1216,9 +1219,10 @@
                         <li>Subscription-based coffee delivery system</li>
                         <li>Farmer relationship management portal</li>
                         <li>Sustainability impact tracking</li>
+                        <li>DHL integration for global shipping</li>
                     </ul>
                     <div class="project-stats">
-                        <span class="visitors">→ Monthly Active Users: 950+</span>
+                        <span class="visitors">→ Monthly Active Users: 900+</span>
                         <div class="tech-stack">
                             <span class="tech-badge">PHP</span>
                             <span class="tech-badge">JavaScript</span>
