--- a/index.html
+++ b/index.html
@@ -958,8 +958,8 @@
                         <div class="profile-placeholder" style="height: 500px; background: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 3px solid var(--accent);">
                             <i class="fas fa-user" style="font-size: 5rem; color: var(--text-light);"></i>
                         </div>
-                        <!-- Uncomment when you have the actual image -->
-                        <!-- <img src="assets/profile.jpg" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 3px solid var(--accent);"> -->
+                     
+                        <img src="assets/profile.jpg" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 3px solid var(--accent);">
                     </div>
                 </div>
             </div>
@@ -1182,7 +1182,7 @@
                 </div>
                 
                 <div class="project-item">
-                    <div class="project-name">Eonn.co.ke</div>
+                    <div class="project-name">Eonn furniture</div>
                     <div class="project-description">
                         A premium furniture e-commerce platform with dynamic portfolio CMS and custom SEO optimization tools for content visibility.
                     </div>
