--- a/index.html
+++ b/index.html
@@ -954,12 +954,12 @@
                 </div>
                 <div class="col-lg-6 d-none d-lg-block fade-in">
                     <div class="text-center">
-                        <!-- Profile placeholder - replace with actual image when available -->
-                        <div class="profile-placeholder" style="height: 500px; background: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 3px solid var(--accent);">
+                        <!-- Profile placeholder - replace with actual image -->
+                        <!-- <div class="profile-placeholder" style="height: 500px; background: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 3px solid var(--accent);">
                             <i class="fas fa-user" style="font-size: 5rem; color: var(--text-light);"></i>
-                        </div>
-                     
-                        <img src="assets/profile.jpg" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 3px solid var(--accent);">
+                        </div> -->
+
+                        <img src="assets/ProfilePic2.png" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 3px solid var(--accent);">
                     </div>
                 </div>
             </div>
