--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
                         <div class="exp-card fade-in">
                             <span class="exp-date">October 2025 – Present</span>
                             <h4>Software Developer & Power BI Specialist</h4>
-                            <h5>Technology Solutions Company</h5>
+                            <h5>Loci Africa Technologies</h5>
                             <ul>
                                 <li>Develop and customize ERP solutions using Microsoft Dynamics NAV/Business Central and .NET</li>
                                 <li>Build and maintain Android applications to enhance business processes</li>
@@ -1105,7 +1105,7 @@
                         <div class="exp-card fade-in">
                             <span class="exp-date">January 2024 – Present</span>
                             <h4>Senior Systems Engineer</h4>
-                            <h5>Enterprise Solutions Provider</h5>
+                            <h5>Namfront Solutions</h5>
                             <ul>
                                 <li>Design and implement scalable system architectures for enterprise clients</li>
                                 <li>Lead integration projects between ERP systems and custom applications</li>
@@ -1123,7 +1123,7 @@
                         <div class="exp-card fade-in">
                             <span class="exp-date">September 2023 – November 2024</span>
                             <h4>Part-Time Robotics Instructor</h4>
-                            <h5>STEM Education Organization</h5>
+                            <h5> CHEZA STEM Education Organization</h5>
                             <ul>
                                 <li>Design and deliver STEM workshops for underrepresented students</li>
                                 <li>Develop interactive lesson plans tailored to different learning levels</li>
@@ -1518,7 +1518,7 @@
             }, 2000);
         });
         
-       document.getElementById('downloadResume').addEventListener('click', function(e) {
+       document.getElementById('downloadCv').addEventListener('click', function(e) {
     e.preventDefault();
     const link = document.createElement('a');
     link.href = 'assets/CV.pdf';
