--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                 </div>
                 
                 <div class="project-item">
-                    <div class="project-name">MubiLeather.com</div>
+                    <div class="project-name">MubiLeather</div>
                     <div class="project-description">
                         An elegant leather goods e-commerce platform featuring secure checkout, admin dashboard, automated email receipts, and payment integrations.
                     </div>
