update on teh skills

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                 <div class="col-lg-10 mx-auto">
                     <div class="exp-timeline">
                         <div class="exp-card fade-in">
-                            <span class="exp-date">October 2025 – Present</span>
+                            <span class="exp-date">October 2023 – Present</span>
                             <h4>Software Developer & Power BI Specialist</h4>
                             <h5>Loci Africa Technologies</h5>
                             <ul>
@@ -1169,7 +1169,10 @@
                                 <span class="skill-badge">Dynamics NAV</span>
                                 <span class="skill-badge">Power BI</span>
                                 <span class="skill-badge">.NET</span>
+                                <span class="skill-badge">Python</span>
                                 <span class="skill-badge">Android</span>
+                                <span class="skill-badge">PHP</span>
+                                
                             </div>
                         </div>
                         
@@ -1186,6 +1189,8 @@
                             <div class="d-flex flex-wrap mt-2">
                                 <span class="skill-badge">System Architecture</span>
                                 <span class="skill-badge">ERP Integration</span>
+                                <span class="skill-badge">PHP</span>
+                                <span class="skill-badge">Python</span>
                                 <span class="skill-badge">Performance Optimization</span>
                                 <span class="skill-badge">Team Leadership</span>
                             </div>
