--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,8 @@
                             <i class="fas fa-user" style="font-size: 5rem; color: var(--text-light);"></i>
                         </div> -->
 
-                        <img src="assets/ProfilePic2.png" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 3px solid var(--accent);">
+                        <!-- <img src="assets/profilepic 2.jpeg" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 1px solid var(--accent);"> -->
+                    <img src="assets/profilepic 2.jpeg" alt="David Seme" class="img-fluid rounded shadow" style="max-height: 500px; border: 1px solid ;">
                     </div>
                 </div>
             </div>
